# bc-ur-java

./: .gitignore  .gitmodules  INSTALLATION.md  README.md
CLA-signed/: CLA.jollyjoker992.D14E566967996C694B22E13A7E808AC50392AD3A.asc
android/: CMakeLists.txt  build.gradle  settings.gradle
android/app/: build.gradle
android/app/src/androidTest/java/com/bc/ur/: TestUtils.kt  URDecoderTest.kt  UREncoderTest.kt  URTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/values/: strings.xml
android/prebuilt/: bc-ur-1.0.0.aar
java/: build.gradle  settings.gradle
java/prebuilt/: libbc-ur.dylib
java/scripts/: build.sh  install_deps.sh
java/src/main/java/com/bc/ur/: BCUR.java  LibraryLoader.java  NativeWrapper.java  UR.java  URDecoder.java  UREncoder.java  URException.java  URJni.java
java/src/main/jniLibs/: bc-ur.cpp
java/src/test/java/com/bc/ur/: TestUtils.java  URDecoderTest.java  UREncoderTest.java  URTest.java
java/src/test/java/com/bc/ur/util/: Callable.java  TestUtils.java
